--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,34 +1,27 @@
-name: Build Flet APK
-
+ame: Build Flet APK
 on:
-  push:
-    branches:
-      - main
-
+push:
+branches:
+- main
 jobs:
-  build:
-    runs-on: ubuntu-latest
+build:
+runs-on: ubuntu-latest
 
-    steps:
-      # ধাপ ক: আপনার রিপোজিটরির কোড ডাউনলোড করা
-      - name: Checkout repository
-        uses: actions/checkout@v3
+steps:
+  - name: Checkout repository
+    uses: actions/checkout@v4
 
-      # ধাপ খ: Flet CLI ইনস্টল করা
-      - name: Install Flet
-        run: pip install flet
+  - name: Install Flet
+    run: pip install flet
 
-      # ধাপ গ: সিক্রেট থেকে service_account.json ফাইল তৈরি করা
-      - name: Create Service Account Key File
-        run: echo "${{ secrets.SERVICE_ACCOUNT_KEY }}" | base64 --decode > mobile_app/service_account.json
+  - name: Create Service Account Key File
+    run: echo "${{ secrets.SERVICE_ACCOUNT_KEY }}" | base64 --decode > mobile_app/service_account.json
 
-      # ধাপ ঘ: APK বিল্ড করা
-      - name: Build APK
-        run: flet build apk --app-name "শ্রুতিপাঠ" --app-description "শিক্ষামূলক অডিও অ্যাপ" --package-name "com.shrutipaath.app" --path mobile_app/
+  - name: Build APK
+    run: flet build apk --app-name "শ্রুতিপাঠ" --app-description "শিক্ষামূলক অডিও অ্যাপ" --package-name "com.shrutipaath.app" --path mobile_app/
 
-      # ধাপ ঙ: বিল্ড হওয়া APK ফাইলটিকে আর্টিফ্যাক্ট হিসেবে আপলোড করা
-      - name: Upload APK Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: shrutipaath-apk
-          path: build/apk/app-release.apk
+  - name: Upload APK Artifact
+    uses: actions/upload-artifact@v4
+    with:
+      name: shrutipaath-apk
+      path: build/apk/app-release.apk
