--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Create Service Account Key File
         run: echo "${{ secrets.SERVICE_ACCOUNT_KEY }}" | base64 --decode > mobile_app/service_account.json
 
-      - name: Build APK
-        run: flet build apk --path mobile_app/
+      - name: Build APK with English Metadata
+        run: flet build apk --app-name "ShrutiPaath" --app-description "Educational Audio App" --package-name "com.shrutipaath.app" --path mobile_app/
 
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
